tests/invalid/trait/impl_method_signature_mismatch.facet
trait Runner {
  fn run(self: &mut Self) -> ();
}

struct Job {
  value: unrestricted isize
}

impl Runner for unrestricted Job {
  fn run(self: &mut Self) -> isize {
    ()
  }
}

fn main() -> unrestricted () {
  ()
}
